feat(mailstak): add sieve editheader extension

--- a/dockerfiles/mailstack/dovecot/conf.d/99-master.conf
+++ b/dockerfiles/mailstack/dovecot/conf.d/99-master.conf
@@ -58,6 +58,7 @@ plugin {
     quota = dict:user::proxy::quotadict
     sieve_dir = /var/vmail/%d/%n/sieve/scripts/
     sieve = /var/vmail/%d/%n/sieve/active.sieve
+    sieve_extensions = +editheader
 }
 
 dict {
