--- a/configs/default/proxy.conf
+++ b/configs/default/proxy.conf
@@ -36,5 +36,6 @@ server {
     location / {
         proxy_pass http://127.0.0.1:80;
         proxy_set_header Host $http_host;
+        proxy_set_header Authorization "Basic ZGV2OmRldg==";
     }
 }
