--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,7 @@ services:
       TINE20_LOGGER_PRIORITY: "7"
       TINE20_ACTIONQUEUE: "false"
       TINE20_LICENSE_PATH: /usr/share/tests/tine20/Tinebase/License/license_contract_MW-TEST-2.0.pem
-      TINE20_SETUP_HTPASSWD: "dev:$$apr1$Ivpb7VfS$$kLnOg/uI0eNpTUhbeZF7n/" # dev:dev
+      TINE20_SETUP_HTPASSWD: "dev:$$apr1$$Ivpb7VfS$$kLnOg/uI0eNpTUhbeZF7n/" # dev:dev
       DEBUG_COLORS: "true"
       TERM: xterm-256color
       COLORTERM: truecolor
