--- a/configs/default/cert.cnf
+++ b/configs/default/cert.cnf
@@ -6,7 +6,7 @@ prompt = no
 O = se
 CN = localhost
 [v3_req]
-keyUsage = keyEncipherment, dataEncipherment
+keyUsage = nonRepudiation, digitalSignature, keyEncipherment
 extendedKeyUsage = serverAuth
 subjectAltName = @alt_names
 [alt_names]
