--- a/configs/default/proxy.conf
+++ b/configs/default/proxy.conf
@@ -1,6 +1,6 @@
-upstream webpack {
-    server webpack:10443;
-}
+# upstream webpack {
+#     server webpack:10443;
+# }
 
 server {
     listen 4000;
@@ -16,22 +16,22 @@ server {
 
     client_max_body_size 0;
 
-    location ~ (^/webpack-dev-server)|(^/sockjs-node) {
-        set $webpackurl webpack:10443;
-        proxy_pass http://webpack;
-        proxy_set_header Host $http_host;
-    }
+    # location ~ (^/webpack-dev-server)|(^/sockjs-node) {
+    #     set $webpackurl webpack:10443;
+    #     proxy_pass http://webpack;
+    #     proxy_set_header Host $http_host;
+    # }
 
-    location ~ \.js {
-        root /usr/share/tine20;
-        try_files $uri @jsfallback;
-    }
+    # location ~ \.js {
+    #     root /usr/share/tine20;
+    #     try_files $uri @jsfallback;
+    # }
 
-    location @jsfallback {
-        set $webpackurl webpack:10443;
-        proxy_pass http://webpack;
-        proxy_set_header Host $http_host;
-    }
+    # location @jsfallback {
+    #     set $webpackurl webpack:10443;
+    #     proxy_pass http://webpack;
+    #     proxy_set_header Host $http_host;
+    # }
 
     location / {
         proxy_pass http://127.0.0.1:80;
