--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@
 /cli/config.yml
 /npm-cache
 .DS_Store
+/configs/traefik/*privkey.pem
+/configs/traefik/fullchain.pem
+/configs/traefik/dynamic/certs.yaml
+**/.decrypted~*
