--- a/compose/broadcasthub.yml
+++ b/compose/broadcasthub.yml
@@ -6,16 +6,14 @@ services:
   broadcasthub-service:
     image: dockerregistry.metaways.net/tine20/tine20-broadcasthub:0.8-r2
     container_name: broadcasthub
-    ports:
-      - "4003:80"
     environment:
       REDIS_URL: redis://cache:6379
       REDIS_CHANNEL: broadcasthub
       AUTH_TIMEOUT: 5000
       WS_PORT: 80
       ENABLE_MULTITENANCY_MODE: 'false'
-      TINE20_JSON_API_URL: http://web:4000
-      TINE20_JSON_API_URL_PATTERN: (http://web:4000)|(http://tenant(1|2|3).my-domain.test:4000)
+      TINE20_JSON_API_URL: https://tine.local.tine-dev.de
+      TINE20_JSON_API_URL_PATTERN: (https://tine.local.tine-dev.de)|(http://tenant(1|2|3).my-domain.test)
       DEBUG_DEFAULT_LOGGING: "on"
       DEBUG_LOG_TO_FILE: "off"
       DEBUG_LOG_FILE: ../../stdout.log
@@ -24,3 +22,11 @@ services:
     networks:
       - external_network
       - internal_network
+    links:
+      - traefik:tine.local.tine-dev.de
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.broadcasthub.rule=Host(`broadcasthub.local.tine-dev.de`)
+      - traefik.http.routers.broadcasthub.entrypoints=websecure
+      - traefik.http.routers.broadcasthub.tls=true
+      - traefik.http.services.broadcasthub.loadbalancer.server.port=80
