--- a/compose/clamav.yml
+++ b/compose/clamav.yml
@@ -2,6 +2,7 @@
 services:
   clamav:
     image: clamav/clamav
+    platform: linux/x86_64
     container_name: clamav
     volumes:
       # need to be created on the host
