--- a/compose/sso.yml
+++ b/compose/sso.yml
@@ -1,6 +1,6 @@
 # @todo: make sure rp's are preconfigured. demodata or here?
 #  INSERT INTO `202311_sso_relying_party` (`id`, `name`, `label`, `description`, `logo`, `config_class`, `config`, `created_by`, `creation_time`, `last_modified_by`, `last_modified_time`, `seq`, `deleted_by`, `deleted_time`, `is_deleted`) VALUES
-#  ('e070a5e46dc3d3ce6e0d94c8c71ed06b67bd4fdf', 'test-id', 'test-id', '', NULL, 'SSO_Model_OAuthOIdRPConfig', '{\"redirect_urls\":\"[\\\"http:\\\\\\/\\\\\\/localhost:4901\\\\\\/auth\\\\\\/callback\\\"]\",\"secret\":\"test-secret\",\"is_confidential\":false,\"id\":\"0\"}', '9b078a5e7b67c51fbefe9441c1179996942bf1c0', '2023-03-29 08:01:03', '9b078a5e7b67c51fbefe9441c1179996942bf1c0', '2023-03-30 09:22:17', 7, NULL, '1970-01-01 00:00:00', 0);
+#  ('e070a5e46dc3d3ce6e0d94c8c71ed06b67bd4fdf', 'test-id', 'test-id', '', NULL, 'SSO_Model_OAuthOIdRPConfig', '{\"redirect_urls\":\"[\\\"https:\\\\\\/\\\\\\/oidctestclient.local.tine-dev.de\\\\\\/auth\\\\\\/callback\\\"]\",\"secret\":\"test-secret\",\"is_confidential\":false,\"id\":\"0\"}', '9b078a5e7b67c51fbefe9441c1179996942bf1c0', '2023-03-29 08:01:03', '9b078a5e7b67c51fbefe9441c1179996942bf1c0', '2023-03-30 09:22:17', 7, NULL, '1970-01-01 00:00:00', 0);
 #  INSERT INTO `202311_sso_relying_party` (`id`, `name`, `label`, `description`, `logo`, `config_class`, `config`, `created_by`, `creation_time`, `last_modified_by`, `last_modified_time`, `seq`, `deleted_by`, `deleted_time`, `is_deleted`) VALUES
 #  ('6c73a12f91f2d05fd33883db35ad294602c83006', 'saml-test-sp', 'saml-test-sp', '', NULL, 'SSO_Model_Saml2RPConfig', '{\"name\":\"saml-test-sp\",\"entityid\":\"saml-test-sp\",\"metaUrl\":\"\",\"AssertionConsumerServiceBinding\":\"\",\"AssertionConsumerServiceLocation\":\"\",\"singleLogoutServiceLocation\":\"\",\"attributeMapping\":\"\",\"customHooks\":\"\",\"id\":\"0\"}', '9b078a5e7b67c51fbefe9441c1179996942bf1c0', '2023-03-30 15:46:17', NULL, NULL, 1, NULL, '1970-01-01 00:00:00', 0);
 
@@ -8,8 +8,8 @@ services:
   oidc-server-mock:
     container_name: oidc-server-mock
     image: soluto/oidc-server-mock
-    ports:
-      - 80:80
+    # ports:
+    #   - 80:80
     environment:
       ASPNETCORE_ENVIRONMENT: Development
       SERVER_OPTIONS_INLINE: |
@@ -63,24 +63,34 @@ services:
       - external_network
       - internal_network
 
+  # callback url: https://oidctestclient.local.tine-dev.de/auth/callback
   oidc-test-client:
     image: ghcr.io/beryju/oidc-test-client
+    restart: unless-stopped
     depends_on:
       - web
-    restart: unless-stopped
-    ports:
-      - 4901:4901
     environment:
       OIDC_BIND: 0.0.0.0:4901
-      OIDC_ROOT_URL: http://localhost:4901
+      OIDC_ROOT_URL: https://oidctestclient.local.tine-dev.de
       OIDC_CLIENT_ID: oidc-test-sp
       OIDC_CLIENT_SECRET: test-secret
-      OIDC_PROVIDER: http://web:4000
+      OIDC_PROVIDER: https://tine.local.tine-dev.de
       OIDC_DO_REFRESH: false
       OIDC_DO_INTROSPECTION: false
+      OIDC_SCOPES: openid,offline_access,profile,email,matrix_id
+    healthcheck:
+      test: [CMD, "true"]
+    links:
+      - traefik:tine.local.tine-dev.de
     networks:
       - external_network
       - internal_network
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.oidctestclient.rule=Host(`oidctestclient.local.tine-dev.de`)
+      - traefik.http.routers.oidctestclient.entrypoints=websecure
+      - traefik.http.routers.oidctestclient.tls=true
+      - traefik.http.services.oidctestclient.loadbalancer.server.port=4901
 
   saml-test-sp:
     image: ghcr.io/beryju/saml-test-sp
