--- a/compose/matrix.yml
+++ b/compose/matrix.yml
@@ -19,10 +19,25 @@ services:
       - traefik:tine.local.tine-dev.de
     labels:
       - traefik.enable=true
-      - traefik.http.routers.broadcasthub.rule=Host(`matrix.local.tine-dev.de`)
-      - traefik.http.routers.broadcasthub.entrypoints=websecure
-      - traefik.http.routers.broadcasthub.tls=true
-      - traefik.http.services.broadcasthub.loadbalancer.server.port=8008
+      - traefik.http.routers.matrix.rule=Host(`matrix.local.tine-dev.de`)
+      - traefik.http.routers.matrix.entrypoints=websecure
+      - traefik.http.routers.matrix.tls=true
+      - traefik.http.services.matrix.loadbalancer.server.port=8008
+
+  element:
+    image: vectorim/element-web:latest
+    volumes:
+      - ./configs/matrix/element-config.json:/app/config.json
+    networks:
+      - internal_network
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.element.rule=Host(`element.local.tine-dev.de`)
+      - traefik.http.routers.element.entrypoints=websecure
+      - traefik.http.routers.element.tls=true
+      - traefik.http.services.element.loadbalancer.server.port=80
+    healthcheck:
+      test: [CMD, "true"]
 
 volumes:
   synapse:
