--- a/dockerfiles/mailstack/dovecot/templates/dovecot-sql.conf.ext.template
+++ b/dockerfiles/mailstack/dovecot/templates/dovecot-sql.conf.ext.template
@@ -1,5 +1,5 @@
 driver = mysql
-connect = host={{getv "/mysql/host"}} dbname={{getv "/mysql/db"}} user={{getv "/mysql/user"}} password={{getv "/mysql/password"}}
+connect = host=db dbname=dovecot user=tine20 password=tine20pw
 default_pass_scheme = SHA512
 
 password_query = SELECT dovecot_users.username AS user, \
