--- a/configs/matrix/synapse/homeserver.yaml
+++ b/configs/matrix/synapse/homeserver.yaml
@@ -30,6 +30,33 @@ modules:
   - module: rest_auth_provider.RestAuthProvider
     config:
       endpoint: http://web
+  - module: shared_secret_authenticator.SharedSecretAuthProvider
+    config:
+      shared_secret: "SynapseSharedSecretAuthenticatorTineSharedSecret"
 user_directory:
   search_all_users: true
   prefer_local_users: true
+
+# matrix sso tine: name=matrix secret=matrix redirect_url="https://matrix.local.tine-dev.de/_synapse/client/oidc/callback"
+oidc_providers:
+- idp_id: 'tine'
+  idp_name: 'tine'
+  issuer: 'https://tine.local.tine-dev.de'
+  client_id: 'matrix'
+  client_secret: 'matrix'
+  scopes: ["openid", "profile", "email"]
+  # scopes: ["openid", "profile", "email", "tine/matrix_synapse_integrator/matrix_id"]
+  user_profile_method: "userinfo_endpoint"
+  user_mapping_provider:
+    config:
+      localpart_template: '{{ user.preferred_username }}'
+      #localpart_template: '{{ user["tine/matrix_synapse_integrator/matrix_id"].split(":")[0] }}'
+      display_name_template: '{{ user.name }}'
+      email_template: '{{ user.email }}'
+  allow_existing_users: true
+
+sso:
+  client_whitelist:
+    - https://element.local.tine-dev.de
+    - http://localhost:8081
+  update_profile_information: true
