--- a/dockerfiles/mailstack/dovecot/etc/dovecot/conf.d/99-master.conf
+++ b/dockerfiles/mailstack/dovecot/etc/dovecot/conf.d/99-master.conf
@@ -1,7 +1,7 @@
 protocols = imap pop3 lmtp sieve
 #disable_plaintext_auth = yes
 disable_plaintext_auth = no
-auth_mechanisms = plain login
+auth_mechanisms = plain login oauthbearer xoauth2
 ssl = yes
 ssl_cert = </etc/ssl/dovecot/server.pem
 ssl_key = </etc/ssl/dovecot/server.key
@@ -33,6 +33,13 @@ service lmtp {
          port = 24
     }
 }
+
+service auth {
+    inet_listener {
+        port = 12345
+    }
+}
+
 
 # ====== Protocols
 
