--- a/compose/mailstack.yml
+++ b/compose/mailstack.yml
@@ -1,6 +1,6 @@
 services:
   postfix:
-    image: dockerregistry.metaways.net/tine20/docker/postfix:1.0.8
+    image: ghcr.io/tine-groupware/tine-dev/postfix:1.0.8
     build: ./dockerfiles/mailstack/postfix
     environment:
       MYSQL_HOST: db
@@ -19,7 +19,7 @@ services:
     stop_grace_period: 1s
 
   dovecot:
-    image: dockerregistry.metaways.net/tine20/docker/dovecot:1.0.6
+    image: ghcr.io/tine-groupware/tine-dev/dovecot:1.0.6
     build: ./dockerfiles/mailstack/dovecot
     environment:
       MYSQL_HOST: db
@@ -41,7 +41,7 @@ services:
     stop_grace_period: 1s
 
   mailstack:
-    image: dockerregistry.metaways.net/tine20/docker/mailstackcontrol:1.0.5
+    image: ghcr.io/tine-groupware/tine-dev/mailstackcontrol:1.0.5
     build: ./dockerfiles/mailstack/control
     environment:
       MYSQL_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD:-root}"
